[File KIO slave] Fix applying special file attributes

QFile does not support special attributes like sticky. This would cause us to always discard them.

BUG: 365795

Differential Revision: https://phabricator.kde.org/D7326